# api-management-slackbot

./: .gitignore  Makefile  README.md  ecs-proxies-containers.yml  ecs-proxies-deploy.yml  manifest.yml  manifest_template.yml  pyproject.toml
.github/workflows/: continuous-integration.yml
azure/: azure-build-pipeline.yml  azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
docker/: app.js  package-lock.json  package.json
docker/__tests__/: app.test.js
docker/utils/: slackUtils.js
proxies/live/apiproxy/: proxy.xml
proxies/live/apiproxy/proxies/: default.xml
proxies/live/apiproxy/targets/: target.xml
