[project]
python = "^3.8"


[tool.poetry]
name = "apim-definitions"
version = "0.0.1-alpha"
description = "FHIR PDS API Definitions"

license = "MIT"

authors = [
    "Laurence Pakenham-Smith <laurence.smith2@nhs.net>",
    "Alex Hawdon <alex.hawdon1@nhs.net>",
    "Tony Heap <tony.heap1@nhs.net>"
]

readme = 'README.md'

repository = "https://github.com/NHSDigital/personal-demographics-service-api"
homepage = ""

keywords = ["healthcare", "uk", "nhs", "demographics"]


[tool.poetry.dependencies]
python = "^3.8"
semver = "^2.10.2"
gitpython = "^3.1.8"